<resources>
    <string name="app_name">Media Info</string>
    <string name="setting">Setting</string>
    <string name="app_title">Media Info</string>
    <string name="msg_subscribe_failed">Unable to Subsribe To topic</string>
    <string name="msg_subscribed">SuccessFully Subscribed To Topic</string>
    <string name="msg_token_fmt">format_for_token</string>
    <string name="famous_menu_title">Top_Rated</string>
    <string name="overview_title">Overview</string>
    <string name="trailers_title">Trailers</string>
    <string name="cast_title_text">Cast</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="season_title">Season</string>
    <string name="episodes">Episodes</string>
    <string name="preference_summarynotification">notification are on</string>
    <string name="preferance_summary_on_notification">notifications are off</string>
    <string name="notification_key">notification</string>
    <string name="notfication_title">notification</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
